# embodied-agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.md  embodied_datakit.bdplan.yaml  pyproject.toml  seed_beads_from_yaml.py
.beads/: config.yaml  issues.jsonl  seed_key_to_id.json
.github/workflows/: ci.yml
.kiro/agents/: beads.json
.kiro/hooks/: beads-context.sh
configs/: default.yaml
configs/pipelines/: oxe_compile.yaml
docs/: release_checklist.md
docs/howto/: adding_adapter.md  quickstart_compile.md  quickstart_export.md
docs/notes/: beads_jsonl_compatibility.md
docs/plan/: deps.md  milestones.md
docs/spec/: action_space.md  cli.md  compiler_contract.md  field_naming.md  golden_path.md  perf_targets.md  provenance.md  storage_targets.md  upstream_formats.md  validation_policy.md
embodied_datakit/: __init__.py  artifacts.py  cli.py  compiler.py  config.py  dataset_card.py  logging.py  manifest.py  random.py  registry.py
embodied_datakit/adapters/: __init__.py  base.py  oxe.py  tfds.py
embodied_datakit/eval/: __init__.py  policy.py  runner.py
embodied_datakit/eval/rlbench/: __init__.py  protocol.py  setup.sh
embodied_datakit/index/: __init__.py  builder.py  query.py  slicer.py  splits.py
embodied_datakit/schema/: __init__.py  action.py  conversion.py  episode.py  index.py  keys.py  spec.py  stats.py  step.py  tasks.py  versioning.py
embodied_datakit/training/: __init__.py
embodied_datakit/transforms/: __init__.py  action.py  base.py  camera.py  image.py  pipeline.py  task.py  timestamp.py
embodied_datakit/validators/: __init__.py  base.py  image.py  reports.py  structural.py
embodied_datakit/writers/: __init__.py  base.py  episodes.py  finalize.py  video.py
embodied_datakit/writers/lerobot_v3/: __init__.py  writer.py
embodied_datakit/writers/rlds_tfds/: __init__.py  schema.py  writer.py
tests/: __init__.py  conftest.py  fixtures.py
tests/integration/: test_pipeline.py
tests/unit/: __init__.py  test_schema.py  test_transforms.py  test_validators.py
